removed light helper, added meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@_willdebras" />
+    <meta name="twitter:title" content="willdebras portfolio" />
+    <meta name="twitter:description" content="An interactive web experience showcasing Will Bonnell's portfolio of projects." />
+    <meta name="twitter:image" content="../images/willdebrascard.jpg" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>willdebras dot dev</title>
+    <meta property="description" content="Will Bonnell aka willdebras dev portfolio" />
+    <meta property="og:image" content="../images/willdebrascard.jpg">
+    <meta property="og:title" content="Will Bonnell's portfolio">
+    <meta property="og:description" content="An interactive web experience showcasing Will Bonnell's portfolio of projects." />
+    <meta property="og:url" content="www.willdebras.dev">
   </head>
   <body>
     <div id="root"></div>
